--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+    "editor.fontSize": 18,
+    "editor.lineHeight": 30,
     "typescript.tsdk": "node_modules/typescript/lib"
 }
